--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
 aiohttp==3.8.5
 aiosignal==1.3.1
 asgiref==3.7.2
-async-timeout==4.0.3
+async-timeout==4.0.3     
 attrs==23.1.0
 autopep8==2.0.2
 blinker==1.6.2
-certifi==2023.7.22
+certifi==2023.7.22       
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
+discord==2.3.2
+discord.py==2.3.2
 distlib==0.3.7
+Django==4.2.4
 filelock==3.12.2
-Flask==2.3.3
+Flask==2.2.5
 Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.0
+gpt3==0.0.1
 greenlet==2.0.2
 gunicorn==21.2.0
 idna==3.4
